syntax = "proto2";
package protocol;

message login {
	required uint32 logicAddr   = 1;
	required string netAddr     = 2;
	optional uint32 exportService = 3;//是否对本组以外暴露服务,1是，2否
}

message loginRet {
	required int32  errCode = 1;
	optional string msg     = 2;
}

message heartbeatToCenter {
	required int64  timestamp = 1;
}

message heartbeatToNode {
	required int64  timestamp = 1;
	required int64  timestamp_back = 2;
}

message nodeInfo {
	required uint32 logicAddr     = 1;
	required string netAddr       = 2;
	optional uint32  exportService = 3;	
}

message nodeAdd {
	repeated nodeInfo nodes = 1;
}

message notifyNodeInfo {
	repeated nodeInfo nodes = 1;
}

message nodeLeave {
	repeated uint32 nodes = 1;
}

message removeNode {
	repeated uint32 nodes = 2;
}

